--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ li {
 
 .start-container {
   font-weight: 600;
-  font-size: 32px;
+  font-size: 30px;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -67,6 +67,7 @@ li {
 
 @media only screen and (max-width: 420px) {
   section.start-container {
+    padding-right: 40px;
     padding-top: 20px;
     display: flex;
     flex-direction: column;
@@ -83,6 +84,7 @@ li {
 
 @media only screen and (max-width: 767px) {
   section.start-container {
+    padding-right: 30px;
     text-align: center;
     padding-top: 150px;
     display: flex;
@@ -345,7 +347,7 @@ li {
 
 .service p {
   width: 250px;
-  text-align: justify;
+  text-align: center;
 }
 
 .card-para,
@@ -401,7 +403,6 @@ li {
 
 .my-work h2 {
   font-size: 22px;
-  letter-spacing: 3px;
   color: rgb(89, 89, 211);
   text-align: center;
   margin-top: 20px;
