--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
   background-color: rgb(239, 239, 239);
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 a {
   text-decoration: none;
   color: black;
